--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,16 @@
 {
     "require": {
         "symfony/console": "2.3.*@dev",
-        "symfony/framework-bundle": "2.2.*@dev",
         "pear/Console_Table": "dev-trunk"
     },
     "autoload": {
         "psr-0": {
             "Bendihossan\\": "src/"
         }
+    },
+    "require-dev": {
+        "symfony/framework-bundle": "2.2.*@dev",
+        "symfony/finder": "2.2.*@dev",
+        "symfony/process": "2.3.*@dev"
     }
 }
